#247: ported to Java 9 and removed guava dependencies (#248)
* #247: ported to Java 9 and removed guava dependencies
* #247: Updated Eclipse settings to Java 9.
* #247: Updated to Exasol docker container 6.2.0.